--- a/starview_frontend/src/components/profile/forms/ProfilePictureForm/styles.css
+++ b/starview_frontend/src/components/profile/forms/ProfilePictureForm/styles.css
@@ -47,11 +47,15 @@
 @media (max-width: 767px) {
   .profile-picture-upload {
     flex-direction: column;
-    align-items: stretch;
+    align-items: center;
   }
 
   .profile-picture-actions {
     width: 100%;
+  }
+
+  .profile-picture-help {
+    text-align: center;
   }
 
   .profile-picture-actions .profile-form-actions {
